fix(style)  alignment adjustments to hero & body 1

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,8 @@ a{
 
 .hero{
     display: flex;
+    gap: 50px;
+    flex-grow: 0;
 }
 
 .hero-title{
@@ -52,7 +54,8 @@ a{
     font-size: 48px;
     font-weight: 900;
     color: #f9faf8;
-    width: 50%;
+    max-width: 450px;
+    padding: 10px 0px;
 }
 
 .hero-text{
@@ -68,6 +71,8 @@ a{
     background-color: gray;
     color: white;
     flex-grow: 1;
+    flex-shrink: 0;
+    padding: 0px 20px;
 }
 
 
@@ -106,16 +111,16 @@ a{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 30px;
+    gap: 50px;
 }
 
 .box, .description{
-    width: 120px;
-    height: 120px;
+    width: 150px;
+    height: 150px;
 }
 
 .box{
-    border-style: solid;
+    border: 4px solid #3882f6;
     border-radius: 10px;
     border-color: #3882f6;
     margin-bottom: 5px;
@@ -123,14 +128,12 @@ a{
 
 .description-container{
     display: flex;
-    justify-content: center;
-    gap: 30px;
-    font-size: 13px;
+    gap: 60px;
     color: gray;
 }
 
 .description{
-    text-align: center;
+    text-align: center
 }
 
 /* 2 OF 2 FROM THE BODY SECTION */
